--- a/index.html
+++ b/index.html
@@ -8,7 +8,32 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="header-logo">
+            Header Logo
+        </div>
+        <div class="nav-bar">
+            <p>Header Link One</p>
+            <p>Header Link Two</p>
+            <p>Header Link Three</p>
+        </div>
 
+    </div>
+    <div class="first-section">
+
+    </div>
+    <div class="second-section">
+
+    </div>
+    <div class="third-section">
+
+    </div>
+    <div class="fourth-section">
+
+    </div>
+    <div class="footer">
+
+    </div>
 </body>
 
 </html>
