--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
 
     </div>
     <div class="first-section">
-
+        <div class="hero-left">
+            <h1>This website is awesome</h1>
+            <p class="hero-text">This website has some subtext that goes here under the main title. It's a smaller font
+                and the color is
+                lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <div class="hero-right">
+            <p>this is a placeholder for an image</p>
+            <img src="" alt="">
+        </div>
     </div>
     <div class="second-section">
 
