--- a/index.html
+++ b/index.html
@@ -34,7 +34,20 @@
         </div>
     </div>
     <div class="second-section">
+        <h2>Some random information</h2>
+        <div class="card-row">
+            <div class="card">
+                <div class="illustration">
 
+                </div>
+                <div class="subtext">
+
+                </div>
+            </div>
+
+
+
+        </div>
     </div>
     <div class="third-section">
 
