--- a/index.html
+++ b/index.html
@@ -41,19 +41,55 @@
 
                 </div>
                 <div class="subtext">
-
+                    <p>This is some subtext under an image.</p>
                 </div>
             </div>
+            <div class="card">
+                <div class="illustration">
 
+                </div>
+                <div class="subtext">
+                    <p>This is some subtext under an image.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="illustration">
 
+                </div>
+                <div class="subtext">
+                    <p>This is some subtext under an image.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="illustration">
 
+                </div>
+                <div class="subtext">
+                    <p>This is some subtext under an image.</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="third-section">
-
+        <em>
+            <p id="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+                space, or maybe
+                people will actually read it. Who knows? All I know is that it looks nice.</p>
+        </em>
+        <strong>
+            <p id="author">-Thor, God of Thunder</p>
+        </strong>
     </div>
     <div class="fourth-section">
-
+        <div class="cta-container">
+            <div>
+                <p>Call to action! It's time</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div>
+                <button>Sign up</button>
+            </div>
+        </div>
     </div>
     <div class="footer">
 
