--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </div>
     <div class="footer">
-
+        <p>Copyright &#169 The Odin Project 2024</p>
     </div>
 </body>
 
